2007-04-04  Yen-Ju Chen <yjchenx at gmail>

	* Update to r5512 of OpenBox3
	* Update to r5534 of OpenBox3

2007-04-03  Yen-Ju Chen <yjchenx at gmail>

	* client_list_combined_menu.m:
	* client_list_combined_menu.h:
	Remove combined menu since it is not that useful.
	* AZDock.m:
	* AZDock.h:
	* AZDockApp.m:
	* AZDockApp.h:
	Remove docklet support in favor of AZDock.

2007-04-01  Yen-Ju Chen <yjchenx at gmail>

	* AZClientManager.m: Post docklet notification to AZDock 
	  in prepare to remove docklet support in Azalea.

2007-03-21  Yen-Ju Chen <yjchenx at gmail>

	* Draw indicator even the window is raise to improve visualization.

2007-03-19  Yen-Ju Chen <yjchenx at gmail>

	* Apply a patch from Jared Yanovich <phirerunner@comcast.net> 
          which was submit to Openbox3 to show the real window
          during window cycling.
	
2007-03-16  Yen-Ju Chen <yjchenx at gmail>

	* Use XWindowServerKit for freedesktop.org base directories.

2007-03-03  Quentin Mathé <qmathe@club-internet.fr>

	* openbox.m: Post NSWorkspaceApplicationDidLaunchNotification to let 
	System monitor Azalea.

2007-02-28 Yen-Ju Chen <yjchenx at gmail>

	* client_list_combined_menu.h:
        * client_list_combined_menu.m:
        * AZMenuManager.m: 
        Add combined window list.  It serves as a simple taskbar.
	* Post notification for managing and unmanaging client.

2006-12-15 Yen-Ju Chen <yjchenx at gmail>

	* Do not post XCurrentWorkspaceDidChangeNotification anymore
          because the WorkspaceSwitcher is deprecated.

2006-10-26 Yen-Ju Chen <yjchenx at gmail>

	* Fix some warnings for GCC-4.1

2006-10-18 Yen-Ju Chen <yjchenx at gmail>

	* Temperory fix for GNUstep menu out of screen.

2006-10-01 Yen-Ju Chen <yjchenx at gmail>

	* Up-to-date.

2006-09-25 Yen-Ju Chen <yjchenx at gmail>

	* remove conflict with DEBUG.

2006-09-16 Yen-Ju Chen <yjchenx at gmail>

	* AZClient.m:
	Update-to-date.

2006-09-09 Yen-Ju Chen <yjchenx at gmail>

	* action.h:
	* action.m: