@@ -2,6 +2,7 @@
 
 	* Update to r5512 of OpenBox3
 	* Update to r5534 of OpenBox3
+	* Update to r5544 of OpenBox3
 
 2007-04-03  Yen-Ju Chen <yjchenx at gmail>
 
